input group component was refactored

--- a/app/static/employee-settings.html
+++ b/app/static/employee-settings.html
@@ -93,7 +93,7 @@
                     <div class="dropdown__body user-dropdown__body">
                       <div class="user-dropdown-menu">
                         <div class="user-dropdown-menu__items">
-                          <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link" href="settings-page.html">
+                          <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link " href="settings-page.html">
                               <div class="user-dropdown-menu__icon">
                                 <svg class="svg-icon svg-icon--surfie-green" width="18" height="18">
                                   <use href="images/svg/svg-sprite/symbol/sprite.svg#cog" x="0" y="0"></use>
@@ -1604,6 +1604,119 @@
                             <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
                           </svg>
                         </button>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="catalog__content-wrap mt-40">
+                    <div class="row justify-content-center">
+                      <div class="col-12 col-xxl-10">
+                        <div class="create-service">
+                          <div class="create-service__title">
+                            <h4 class="text-surfie-green">Create new service</h4>
+                          </div>
+                          <div class="create-service__content">
+                            <div class="row">
+                              <div class="col-3">
+                                <div class="form-group">
+                                  <div class="form-group__header">
+                                    <p>Service</p>
+                                  </div>
+                                  <div class="select js-select">
+                                    <button class="select__label js-select-label" data-selected="translation" type="button"><span>Translation</span>
+                                    </button>
+                                    <div class="select__dropdown js-select-dropdown">
+                                      <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                        <div class="select__options js-select-options">
+                                          <div class="select__option js-select-option" data-option="translation"><span>Translation</span></div>
+                                          <div class="select__option js-select-option" data-option="translation 2"><span>Translation 2</span></div>
+                                          <div class="select__option js-select-option" data-option="translation 3"><span>Translation 3</span></div>
+                                        </div>
+                                      </div>
+                                    </div>
+                                    <input class="select__input js-select-input" type="hidden">
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-4">
+                                <div class="form-group">
+                                  <div class="form-group__header">
+                                    <p>Matt name</p>
+                                  </div>
+                                  <div class="row-group row-group--sm row-group--flex-1">
+                                    <div class="row-group__item">
+                                      <div class="select js-select">
+                                        <button class="select__label js-select-label" data-selected="DHL" type="button"><span>DHL</span>
+                                        </button>
+                                        <div class="select__dropdown js-select-dropdown">
+                                          <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                            <div class="select__options js-select-options">
+                                              <div class="select__option js-select-option" data-option="DHL"><span>DHL</span></div>
+                                              <div class="select__option js-select-option" data-option="DHL 2"><span>DHL 2</span></div>
+                                              <div class="select__option js-select-option" data-option="DHL 3"><span>DHL 3</span></div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                        <input class="select__input js-select-input" type="hidden">
+                                      </div>
+                                    </div>
+                                    <div class="row-group__item">
+                                      <input class="input input--alabaster" value="Value = 1 vnt">
+                                    </div>
+                                    <div class="row-group__item">
+                                      <div class="input-group">
+                                        <div class="input-group__prepend">
+                                          <p>€</p>
+                                        </div>
+                                        <input class="input input--alabaster input-group__input" type="number" placeholder="Price">
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                              <div class="col-4">
+                                <div class="form-group">
+                                  <div class="form-group__header">
+                                    <p>Languages:</p>
+                                  </div>
+                                  <div class="row-group row-group--sm">
+                                    <div class="row-group__item">
+                                      <div class="select js-select">
+                                        <button class="select__label js-select-label" data-selected="source" type="button"><span>Source</span>
+                                        </button>
+                                        <div class="select__dropdown js-select-dropdown">
+                                          <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                            <div class="select__options js-select-options">
+                                              <div class="select__option js-select-option" data-option="source"><span>Source</span></div>
+                                              <div class="select__option js-select-option" data-option="source 2"><span>Source 2</span></div>
+                                              <div class="select__option js-select-option" data-option="source 3"><span>Source 3</span></div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                        <input class="select__input js-select-input" type="hidden">
+                                      </div>
+                                    </div>
+                                    <div class="row-group__item">
+                                      <div class="select js-select">
+                                        <button class="select__label js-select-label" data-selected="target" type="button"><span>Target</span>
+                                        </button>
+                                        <div class="select__dropdown js-select-dropdown">
+                                          <div class="custom-scroll select__dropdown-scroll" data-select-simplebar>
+                                            <div class="select__options js-select-options">
+                                              <div class="select__option js-select-option" data-option="target"><span>Target</span></div>
+                                              <div class="select__option js-select-option" data-option="target 2"><span>Target 2</span></div>
+                                              <div class="select__option js-select-option" data-option="target 3"><span>Target 3</span></div>
+                                            </div>
+                                          </div>
+                                        </div>
+                                        <input class="select__input js-select-input" type="hidden">
+                                      </div>
+                                    </div>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                       </div>
                     </div>
                   </div>
