--- a/app/static/employers-page.html
+++ b/app/static/employers-page.html
@@ -93,7 +93,7 @@
                     <div class="dropdown__body user-dropdown__body">
                       <div class="user-dropdown-menu">
                         <div class="user-dropdown-menu__items">
-                          <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link" href="settings-page.html">
+                          <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link " href="settings-page.html">
                               <div class="user-dropdown-menu__icon">
                                 <svg class="svg-icon svg-icon--surfie-green" width="18" height="18">
                                   <use href="images/svg/svg-sprite/symbol/sprite.svg#cog" x="0" y="0"></use>
@@ -200,9 +200,9 @@
           <div class="catalog">
             <div class="catalog__header">
               <div class="catalog__left">
-                <div class="input-group input-group--absolute">
+                <div class="input-group">
                   <input class="input input--white input-group__input" type="text" placeholder="Search" style="min-width:180px;" />
-                  <div class="input-group__append-absolute">
+                  <div class="input-group__append">
                     <svg class="svg-icon svg-icon--silver-chalice" width="12" height="12">
                       <use href="images/svg/svg-sprite/symbol/sprite.svg#search" x="0" y="0"></use>
                     </svg>
