--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -93,7 +93,7 @@
                     <div class="dropdown__body user-dropdown__body">
                       <div class="user-dropdown-menu">
                         <div class="user-dropdown-menu__items">
-                          <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link" href="settings-page.html">
+                          <div class="user-dropdown-menu__item"><a class="user-dropdown-menu__link is-active" href="settings-page.html">
                               <div class="user-dropdown-menu__icon">
                                 <svg class="svg-icon svg-icon--surfie-green" width="18" height="18">
                                   <use href="images/svg/svg-sprite/symbol/sprite.svg#cog" x="0" y="0"></use>
