New components: create-skills-dropdown, create-service

--- a/app/static/employers-page.html
+++ b/app/static/employers-page.html
@@ -147,9 +147,9 @@
                       <div class="invite-employee-dropdown__item">
                         <input class="input input--white invite-employee-dropdown__item-name" value="Name of this link" />
                         <div class="invite-employee-dropdown__item-input-wrap">
-                          <div class="input-group input-group--absolute">
+                          <div class="input-group">
                             <input class="input input--border-alto input-group__input invite-employee-dropdown__link-input" value="vertimukaraliai.lt/officeworker-registration" />
-                            <div class="input-group__append-absolute">
+                            <div class="input-group__append">
                               <button class="button button--inline button--color-surfie-green" type="button">Copy
                               </button>
                             </div>
@@ -166,9 +166,9 @@
                       <div class="invite-employee-dropdown__item">
                         <input class="input input--white invite-employee-dropdown__item-name" value="Name of this link" />
                         <div class="invite-employee-dropdown__item-input-wrap">
-                          <div class="input-group input-group--absolute">
+                          <div class="input-group">
                             <input class="input input--border-alto input-group__input invite-employee-dropdown__link-input" value="vertimukaraliai.lt/officeworker-registration" />
-                            <div class="input-group__append-absolute">
+                            <div class="input-group__append">
                               <button class="button button--inline button--color-surfie-green" type="button">Copy
                               </button>
                             </div>
