--- a/app/static/application-page-2.html
+++ b/app/static/application-page-2.html
@@ -199,7 +199,7 @@
                             <h6>Uploaded documents: <span class="p-sm font-semibold upload-documents__header-empty text-silver-chalice">No files yet</span></h6>
                           </div>
                           <div class="upload-documents__header-button">
-                            <button class="button button--disabled button--border-surfie-green" type="button"><span>Download all</span>
+                            <button class="button button--disabled button--border-surfie-green" disabled type="button"><span>Download all</span>
                               <svg class="svg-icon button__icon" width="15" height="13">
                                 <use href="images/svg/svg-sprite/symbol/sprite.svg#download" x="0" y="0"></use>
                               </svg>
