skills-dropdown was refactored

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -594,18 +594,14 @@
                                     <p class="font-semibold text-silver-chalice">5234 skills</p>
                                   </div>
                                   <div class="skills-dropdown__search">
-                                    <div class="skills-dropdown__search-input">
-                                      <div class="input-group">
-                                        <input class="input input--border-alto input-group__input" type="text">
-                                        <div class="input-group__append">
-                                          <svg class="svg-icon svg-icon--silver-chalice" width="12" height="12">
-                                            <use href="images/svg/svg-sprite/symbol/sprite.svg#search" x="0" y="0"></use>
-                                          </svg>
-                                        </div>
+                                    <div class="input-group">
+                                      <input class="input input--border-alto input-group__input" type="text">
+                                      <div class="input-group__append">
+                                        <svg class="svg-icon svg-icon--silver-chalice" width="12" height="12">
+                                          <use href="images/svg/svg-sprite/symbol/sprite.svg#search" x="0" y="0"></use>
+                                        </svg>
                                       </div>
                                     </div>
-                                    <button class="button button--shadow button--white" type="button">Confirm
-                                    </button>
                                   </div>
                                   <div class="skills-dropdown__variants">
                                     <div class="skills-dropdown__variants-title">
@@ -645,6 +641,10 @@
                                         </div>
                                       </div>
                                     </div>
+                                  </div>
+                                  <div class="skills-dropdown__footer">
+                                    <button class="button button--shadow button--border-surfie-green" type="button">Confirm
+                                    </button>
                                   </div>
                                 </div>
                               </div>
@@ -713,18 +713,14 @@
                                     <p class="font-semibold text-silver-chalice">5234 skills</p>
                                   </div>
                                   <div class="skills-dropdown__search">
-                                    <div class="skills-dropdown__search-input">
-                                      <div class="input-group">
-                                        <input class="input input--border-alto input-group__input" type="text">
-                                        <div class="input-group__append">
-                                          <svg class="svg-icon svg-icon--silver-chalice" width="12" height="12">
-                                            <use href="images/svg/svg-sprite/symbol/sprite.svg#search" x="0" y="0"></use>
-                                          </svg>
-                                        </div>
+                                    <div class="input-group">
+                                      <input class="input input--border-alto input-group__input" type="text">
+                                      <div class="input-group__append">
+                                        <svg class="svg-icon svg-icon--silver-chalice" width="12" height="12">
+                                          <use href="images/svg/svg-sprite/symbol/sprite.svg#search" x="0" y="0"></use>
+                                        </svg>
                                       </div>
                                     </div>
-                                    <button class="button button--shadow button--white" type="button">Confirm
-                                    </button>
                                   </div>
                                   <div class="skills-dropdown__variants">
                                     <div class="skills-dropdown__variants-title">
@@ -764,6 +760,10 @@
                                         </div>
                                       </div>
                                     </div>
+                                  </div>
+                                  <div class="skills-dropdown__footer">
+                                    <button class="button button--shadow button--border-surfie-green" type="button">Confirm
+                                    </button>
                                   </div>
                                 </div>
                               </div>
