manage-skill logic was implemented

--- a/app/static/settings-page.html
+++ b/app/static/settings-page.html
@@ -580,8 +580,8 @@
                               <h5>Skills:</h5>
                             </div>
                             <div class="row-group__item">
-                              <div class="dropdown js-dropdown skills-dropdown" data-dropdown="skills">
-                                <div class="dropdown__toggle skills-dropdown__toggle" data-dropdown-toggle="skills">
+                              <div class="dropdown js-dropdown skills-dropdown" data-dropdown="skills-dropdown">
+                                <div class="dropdown__toggle skills-dropdown__toggle" data-dropdown-toggle="skills-dropdown">
                                   <button class="button button--border-surfie-green button--size-20" type="button">
                                     <svg class="svg-icon svg-icon--surfie-green" width="10" height="10">
                                       <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
@@ -799,8 +799,8 @@
                               <h5>Expertise:</h5>
                             </div>
                             <div class="row-group__item">
-                              <div class="dropdown js-dropdown skills-dropdown" data-dropdown="skills">
-                                <div class="dropdown__toggle skills-dropdown__toggle" data-dropdown-toggle="skills">
+                              <div class="dropdown js-dropdown skills-dropdown" data-dropdown="skills-dropdown">
+                                <div class="dropdown__toggle skills-dropdown__toggle" data-dropdown-toggle="skills-dropdown">
                                   <button class="button button--border-surfie-green button--size-20" type="button">
                                     <svg class="svg-icon svg-icon--surfie-green" width="10" height="10">
                                       <use href="images/svg/svg-sprite/symbol/sprite.svg#plus" x="0" y="0"></use>
