employees tab was switched to default

--- a/app/static/employee-settings.html
+++ b/app/static/employee-settings.html
@@ -169,7 +169,7 @@
             </div>
             <div class="catalog__box">
               <div class="catalog__content">
-                <div class="catalog__content-item tabs__content js-tabs-content" data-content="general">
+                <div class="catalog__content-item tabs__content js-tabs-content is-active" data-content="general">
                   <div class="catalog__content-wrap">
                     <div class="row">
                       <div class="col-12 col-xl-3 col-xxl-2 offset-0 offset-xxl-1 mb-40 mb-xxl-0">
@@ -619,7 +619,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="catalog__content-item tabs__content js-tab-content is-active" data-content="education">
+                <div class="catalog__content-item tabs__content js-tab-content" data-content="education">
                   <div class="catalog__content-wrap">
                     <div class="row">
                       <div class="col-12 col-md-6 col-xl-4 offset-0 offset-xxl-1 mb-40">
