chip was refactored

--- a/app/static/employee-settings.html
+++ b/app/static/employee-settings.html
@@ -173,27 +173,123 @@
                   <div class="catalog__content-wrap">
                     <div class="row">
                       <div class="col-12 col-xl-3 col-xxl-2 offset-0 offset-xxl-1 mb-40 mb-xxl-0">
+                        <div class="mb-30">
+                          <div class="column-group column-group--sm column-group--justify-items-center">
+                            <div class="column-group__item">
+                              <div class="edit-avatar">
+                                <div class="avatar avatar--xl">
+                                  <figure style="background-image:url('images/user/avatar.jpg')"></figure>
+                                </div>
+                                <div class="edit-avatar__button">
+                                  <button class="button button--round button--alabaster button--size-50" type="button" data-modal-open="edit-avatar-modal">
+                                    <svg class="svg-icon svg-icon--surfie-green" width="18" height="16">
+                                      <use href="images/svg/svg-sprite/symbol/sprite.svg#camera" x="0" y="0"></use>
+                                    </svg>
+                                  </button>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="column-group__item">
+                              <div class="dropdown js-dropdown change-position-dropdown" data-dropdown="change-position-dropdown">
+                                <div class="dropdown__toggle change-position-dropdown__toggle" data-dropdown-toggle="change-position-dropdown">
+                                  <div class="chip chip--border-boston-blue chip--size-sm">
+                                    <div class="chip__title">Project manager</div>
+                                    <div class="chip__dots">
+                                      <svg class="svg-icon svg-icon--boston-blue" width="15" height="3">
+                                        <use href="images/svg/svg-sprite/symbol/sprite.svg#three-dots" x="0" y="0"></use>
+                                      </svg>
+                                    </div>
+                                  </div>
+                                </div>
+                                <div class="dropdown__body change-position-dropdown__body">
+                                  <div class="change-position-dropdown__header">
+                                    <h5>Change position</h5>
+                                    <h5 class="text-silver-chalice">5234 positions</h5>
+                                  </div>
+                                  <div class="change-position-dropdown__search">
+                                    <div class="input-group">
+                                      <input class="input input--border-alto input-group__input" type="text" placeholder="Search">
+                                      <div class="input-group__append">
+                                        <svg class="svg-icon svg-icon--silver-chalice" width="12" height="12">
+                                          <use href="images/svg/svg-sprite/symbol/sprite.svg#search" x="0" y="0"></use>
+                                        </svg>
+                                      </div>
+                                    </div>
+                                  </div>
+                                  <div class="change-position-dropdown__title">
+                                    <h6>Setted position permissions will be applied!</h6>
+                                  </div>
+                                  <div class="custom-scroll change-position-dropdown__items" data-dropdown-simplebar>
+                                    <div class="change-position-dropdown__item">
+                                      <label class="radio change-position-dropdown__item-radio">
+                                        <div class="radio__box">
+                                          <input class="radio__input" type="radio" checked name="position"><span class="radio__checkmark"></span>
+                                        </div><span class="radio__name">Project manager</span>
+                                      </label>
+                                    </div>
+                                    <div class="change-position-dropdown__item">
+                                      <label class="radio change-position-dropdown__item-radio">
+                                        <div class="radio__box">
+                                          <input class="radio__input" type="radio" name="position"><span class="radio__checkmark"></span>
+                                        </div><span class="radio__name">Admin</span>
+                                      </label>
+                                    </div>
+                                    <div class="change-position-dropdown__item">
+                                      <label class="radio change-position-dropdown__item-radio">
+                                        <div class="radio__box">
+                                          <input class="radio__input" type="radio" name="position"><span class="radio__checkmark"></span>
+                                        </div><span class="radio__name">Sales manager</span>
+                                      </label>
+                                    </div>
+                                    <div class="change-position-dropdown__item">
+                                      <label class="radio change-position-dropdown__item-radio">
+                                        <div class="radio__box">
+                                          <input class="radio__input" type="radio" name="position"><span class="radio__checkmark"></span>
+                                        </div><span class="radio__name">Office worker</span>
+                                      </label>
+                                    </div>
+                                    <div class="change-position-dropdown__item">
+                                      <label class="radio change-position-dropdown__item-radio">
+                                        <div class="radio__box">
+                                          <input class="radio__input" type="radio" name="position"><span class="radio__checkmark"></span>
+                                        </div><span class="radio__name">Procurement managament</span>
+                                      </label>
+                                    </div>
+                                    <div class="change-position-dropdown__item">
+                                      <label class="radio change-position-dropdown__item-radio">
+                                        <div class="radio__box">
+                                          <input class="radio__input" type="radio" name="position"><span class="radio__checkmark"></span>
+                                        </div><span class="radio__name">Some other position</span>
+                                      </label>
+                                    </div>
+                                  </div>
+                                  <div class="change-position-dropdown__footer">
+                                    <button class="button button--border-surfie-green" type="button" data-dropdown-close="change-position-dropdown">Confirm
+                                    </button>
+                                  </div>
+                                </div>
+                              </div>
+                            </div>
+                            <div class="column-group__item">
+                              <p class="p-sm">Member since: 2015-04-12</p>
+                            </div>
+                            <div class="column-group__item">
+                              <div class="link" data-modal-open="password-change-modal">Change password
+                              </div>
+                            </div>
+                          </div>
+                        </div>
                         <div class="column-group column-group--sm column-group--justify-items-center">
                           <div class="column-group__item">
-                            <div class="edit-avatar">
-                              <div class="avatar avatar--xl">
-                                <figure style="background-image:url('images/user/avatar.jpg')"></figure>
-                              </div>
-                              <div class="edit-avatar__button">
-                                <button class="button button--round button--alabaster button--size-50" type="button" data-modal-open="edit-avatar-modal">
-                                  <svg class="svg-icon svg-icon--surfie-green" width="18" height="16">
-                                    <use href="images/svg/svg-sprite/symbol/sprite.svg#camera" x="0" y="0"></use>
-                                  </svg>
-                                </button>
-                              </div>
-                            </div>
+                            <button class="button button--shadow button--white" type="button">
+                              <svg class="svg-icon svg-icon--surfie-green button__icon" width="11" height="14">
+                                <use href="images/svg/svg-sprite/symbol/sprite.svg#triangle-right" x="0" y="0"></use>
+                              </svg><span>Unsuspend</span>
+                            </button>
                           </div>
                           <div class="column-group__item">
-                            <p class="p-sm">Member since: 2015-04-12</p>
-                          </div>
-                          <div class="column-group__item">
-                            <div class="link" data-modal-open="password-change-modal">Change password
-                            </div>
+                            <button class="button button--shadow button--white button--color-brick-red" type="button">Delete account
+                            </button>
                           </div>
                         </div>
                       </div>
@@ -776,7 +872,7 @@
                                     </div>
                                     <div class="manage-skills__form">
                                       <div class="manage-skills__form-wrap">
-                                        <input class="input input--border-alto manage-skills__form-input" type="text">
+                                        <input class="input input--radius-type-2 input--border-alto manage-skills__form-input" type="text">
                                         <button class="button button--transparent manage-skills__form-submit">Submit
                                         </button>
                                       </div>
@@ -1037,7 +1133,7 @@
                                     </div>
                                   </div>
                                   <div class="manage-skills__footer">
-                                    <button class="button button--shadow button--border-surfie-green" type="button" data-dropdown-close="manage-skills-dropdown">Confirm
+                                    <button class="button button--border-surfie-green" type="button" data-dropdown-close="manage-skills-dropdown">Confirm
                                     </button>
                                   </div>
                                 </div>
@@ -1127,7 +1223,7 @@
                                     </div>
                                     <div class="manage-skills__form">
                                       <div class="manage-skills__form-wrap">
-                                        <input class="input input--border-alto manage-skills__form-input" type="text">
+                                        <input class="input input--radius-type-2 input--border-alto manage-skills__form-input" type="text">
                                         <button class="button button--transparent manage-skills__form-submit">Submit
                                         </button>
                                       </div>
@@ -1388,7 +1484,7 @@
                                     </div>
                                   </div>
                                   <div class="manage-skills__footer">
-                                    <button class="button button--shadow button--border-surfie-green" type="button" data-dropdown-close="manage-skills-dropdown">Confirm
+                                    <button class="button button--border-surfie-green" type="button" data-dropdown-close="manage-skills-dropdown">Confirm
                                     </button>
                                   </div>
                                 </div>
